# whisply

./: .gitignore  LICENSE  Makefile  README.md  model-dialog-concepts.html  onboarding.html  overlay-concepts.html  overlay.html  package.json  vite.config.ts
.github/workflows/: build-rpm-telegram.yml  model-compatibility.yml  release.yml
.impeccable/critique/: 2026-07-16T08-27-37Z__src.md
.pi/plans/: 314290ac.md  61434e62.md
docs/: appimage-renderer-fix.md
plans/: 001-model-runtime-hardening.md  README.md
src/: index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.remote.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  dictation.rs  dictionary.rs  history.rs  input.rs  lib.rs  main.rs  models.rs  onboarding.rs  overlay.rs  shortcut.rs  snippets.rs  system.rs  transcription.rs
src/components/: app-shell.tsx  app-sidebar.tsx  app-updater.tsx  debug-panel.tsx  dictation-archive.tsx  dictation-demo.tsx  dictation-query-synchronizer.tsx  global-wave.tsx  layout.tsx  nav-footer.tsx  nav-header.tsx  page.tsx  recording-overlay.tsx  settings-nav.tsx  shortcut-recorder.tsx  sidebar-nav.tsx  stats.tsx  streak-heatmap.tsx  titlebar.tsx  transcript-table.tsx
src/components/onboarding/: onboarding-view.tsx  step-complete.tsx  step-indicator.tsx  step-keybindings.tsx  step-model.tsx  (+3 more)
src/hooks/: use-dictation-archive.ts  use-dictation.ts  use-global-shortcut.ts  use-home-dashboard.ts  use-insights-dashboard.ts  use-snippets.ts
src/lib/: app-updater.ts  audio.ts  dictation-queries.ts  dictionary.ts  history.ts  models.ts  preferences.ts  query-client.ts  shortcuts.ts  system.ts
src/onboarding/: main.tsx  onboarding.css
src/overlay/: App.tsx  main.tsx  overlay.css
src/pages/: dictionary-page.tsx  home-page.tsx  insights-page.tsx  logs-page.tsx  onboarding-page.tsx  settings-page.tsx  settings-sub-page.tsx  shortcut-settings-page.tsx  snippets-page.tsx  style-page.tsx
src/routes/: __root.tsx  dictionary.tsx  index.tsx  insights.tsx  logs.tsx  onboarding.tsx  settings.tsx  snippets.tsx  style.tsx
(+24 files in other folders)
