[package]
name = "tauri-native"
version = "0.1.0"
description = "Whisply — privacy-first voice dictation for Linux"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
tauri-plugin-log = "2"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16"
enigo = "0.6"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
