[package]
name = "tauri-native"
version = "0.1.0"
description = "Whisply — privacy-first voice dictation for Linux"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
tauri-plugin-log = "2"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16"
enigo = "0.6"
sherpa-onnx = "1.13.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
bzip2 = "0.6.1"
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
tar = { version = "0.4.46", default-features = false }
rusqlite = { version = "0.32.1", features = ["bundled"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }
gtk = "0.18"
evdev = "0.13.2"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
